# backend-python-assessment-main

./: README.md  pyproject.toml
be_python_assessment/: main.py
be_python_assessment/configs/: conf.yml  configs.py
be_python_assessment/data/: breeds.json  cats.json  dogs.json  pets.json
be_python_assessment/db/: mockdb.py
be_python_assessment/models/: breeds.py  common.py  pets.py
be_python_assessment/routers/: breeds.py  health.py  pets.py
be_python_assessment/services/: breeds.py  pets.py  service_launcher.py
tests/: test_breeds_service.py  test_pets_service.py
